--- a/LearnNLog/NLog.example.config
+++ b/LearnNLog/NLog.example.config
@@ -24,6 +24,15 @@
             archiveNumbering="Date"
             maxArchiveFiles="100"
             concurrentWrites="true" />
+    
+    <target xsi:type="File" name="fError"
+            layout="${longdate} ${uppercase:${level}} ${message}"
+			fileName="${basedir}/logs/errorfile.txt"
+            archiveFileName="${basedir}/logs/errorfile.{#}.txt"
+            archiveEvery="Day"
+            archiveNumbering="Date"
+            maxArchiveFiles="100"
+            concurrentWrites="true" />
     <!--
     add your targets here
     See https://github.com/nlog/NLog/wiki/Targets for possible targets.
@@ -38,7 +47,8 @@
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="f" />
+    <logger name="*" minlevel="Info" writeTo="f" />
+    <logger name="*" minlevel="Error" maxlevel="Error"  writeTo="fError" />
     <!-- add your logging rules here -->
 
     <!--
